--- a/src/ColorBox.css
+++ b/src/ColorBox.css
@@ -5,4 +5,64 @@
   display: inline-block;
   position: relative;
   cursor: pointer;
+  margin-bottom: -4px; /* this is required after styling ".see-more" */
+}
+
+.copy-button {
+  width: 100px;
+  height: 30px;
+  position: absolute;
+  display: inline-block;
+  top: 50%;
+  left: 50%;
+  margin-left: -50px; /*to center button, since width=100px*/
+  margin-top: -15px; /*to center button, since height=30px*/
+  text-align: center;
+  outline: none;
+  background: rgba(255, 255, 255, 0.3);
+  font-size: 1rem;
+  line-height: 30px; /* used for centrelizing vertically */
+  color: white;
+  text-transform: uppercase;
+  border: none;
+  opacity: 0; /* Copy button completely hidden */
+}
+
+/*
+.copy-button:hover {
+  opacity: 1;
+}
+*/
+/* We want to see Copy button not only its hovered, we want when full ColorBox hovered */
+
+/* When hover the "ColorBox" then style the "copy-button" */
+.ColorBox:hover .copy-button {
+  opacity: 1;
+  transition: 0.5s;
+}
+
+.box-content {
+  position: absolute;
+  width: 100%;
+  left: 0px;
+  bottom: 0px;
+  padding: 10px;
+  color: black;
+  letter-spacing: 1px;
+  text-transform: uppercase;
+  font-size: 12px;
+}
+
+.see-more {
+  background: rgba(255, 255, 255, 0.3);
+  position: absolute;
+  border: none;
+  right: 0px;
+  bottom: 0px;
+  color: white;
+  width: 60px;
+  height: 30px;
+  text-align: center;
+  line-height: 30px; /* used for centrelizing vertically */
+  text-transform: uppercase;
 }
