Select in the Navbar styled

--- a/src/Navbar.css
+++ b/src/Navbar.css
@@ -35,3 +35,8 @@
   text-decoration: none;
   color: black;
 }
+
+.select-container {
+  margin-left: auto; /* this aligns right */
+  margin-right: 1rem;
+}
