--- a/src/ColorBox.css
+++ b/src/ColorBox.css
@@ -5,7 +5,7 @@
   display: inline-block;
   position: relative;
   cursor: pointer;
-  margin-bottom: -4px; /* this is required after styling ".see-more" */
+  margin-bottom: -4px;
 }
 
 /* if ColorBox is inside a SingleColorPalette then behave differently! */
@@ -17,7 +17,7 @@
   background-color: black;
 }
 
-.copy-button,
+/* .copy-button, */
 .back-button {
   width: 100px;
   height: 30px;
@@ -39,10 +39,11 @@
   /* opacity: 0;  */
   /* Copy button completely hidden */
 }
+/*
 .copy-button {
-  opacity: 0; /* Copy button completely hidden */
+  opacity: 0; 
 }
-
+*/
 /*
 .copy-button:hover {
   opacity: 1;
@@ -80,6 +81,7 @@
   color: rgba(0, 0, 0, 0.5); /* better than black*/
 }
 
+/*
 .see-more {
   background: rgba(255, 255, 255, 0.3);
   position: absolute;
@@ -90,10 +92,10 @@
   width: 60px;
   height: 30px;
   text-align: center;
-  line-height: 30px; /* used for centrelizing vertically */
+  line-height: 30px;
   text-transform: uppercase;
 }
-
+*/
 .copy-overlay {
   opacity: 0;
   z-index: 0;
