--- a/src/ColorBox.css
+++ b/src/ColorBox.css
@@ -1,3 +1,4 @@
+/*
 .ColorBox {
   width: 20%;
   height: 25%;
@@ -5,19 +6,23 @@
   display: inline-block;
   position: relative;
   cursor: pointer;
-  margin-bottom: -4px;
+  margin-bottom: -4px; // this is required after styling ".see-more"
 }
 
-/* if ColorBox is inside a SingleColorPalette then behave differently! */
+//if ColorBox is inside a SingleColorPalette then behave differently!
 .SingleColorPalette .ColorBox {
   height: 50%;
 }
+*/
 
+/*
 .ColorBox.go-back {
   background-color: black;
 }
+*/
 
 /* .copy-button, */
+/*
 .back-button {
   width: 100px;
   height: 30px;
@@ -25,20 +30,22 @@
   display: inline-block;
   top: 50%;
   left: 50%;
-  margin-left: -50px; /*to center button, since width=100px*/
-  margin-top: -15px; /*to center button, since height=30px*/
+  margin-left: -50px; //to center button, since width=100px//
+  margin-top: -15px; //to center button, since height=30px//
   text-align: center;
   outline: none;
   background: rgba(255, 255, 255, 0.3);
   font-size: 1rem;
-  line-height: 30px; /* used for centrelizing vertically */
+  line-height: 30px; /* used for centrelizing vertically //
   color: white;
   text-transform: uppercase;
   border: none;
   text-decoration: none;
-  /* opacity: 0;  */
-  /* Copy button completely hidden */
+  /* opacity: 0; //
+  /* Copy button completely hidden //
 }
+*/
+
 /*
 .copy-button {
   opacity: 0; 
@@ -52,11 +59,13 @@
 /* We want to see Copy button not only its hovered, we want when full ColorBox hovered */
 
 /* When hover the "ColorBox" then style the "copy-button" */
+/*
 .ColorBox:hover .copy-button {
   opacity: 1;
   transition: 0.5s;
 }
-
+*/
+/*
 .box-content {
   position: absolute;
   width: 100%;
@@ -68,19 +77,22 @@
   text-transform: uppercase;
   font-size: 12px;
 }
+*/
 
+/* 
 .light-text {
   color: white;
-}
+} 
+*/
 
 /* this .dark-test class alone overwritten by .ColorBox class */
 /* so, we need to be more specific */
 /* .dark-text { */
-.ColorBox .dark-text {
-  /* color: black; */
-  color: rgba(0, 0, 0, 0.5); /* better than black*/
+/*
+  .ColorBox .dark-text {
+  color: rgba(0, 0, 0, 0.5); //better than black
 }
-
+*/
 /*
 .see-more {
   background: rgba(255, 255, 255, 0.3);
@@ -96,15 +108,16 @@
   text-transform: uppercase;
 }
 */
+
+/*
 .copy-overlay {
   opacity: 0;
   z-index: 0;
   width: 100%;
   height: 100%;
   transition: transform 0.6s ease-in-out;
-  transform: scale(0.1); /* you might not notice the difference  */
+  transform: scale(0.1); //you might not notice the difference
 }
-
 .copy-overlay.show {
   opacity: 1;
   transform: scale(50);
@@ -151,3 +164,4 @@
   font-size: 2rem;
   font-weight: 100;
 }
+*/
