Refactor Palette Styles

--- a/src/Palette.css
+++ b/src/Palette.css
@@ -1,3 +1,4 @@
+/*
 .Palette {
   height: 98vh;
   width: 99vw;
@@ -9,7 +10,7 @@
 .Palette-colors {
   height: 90%;
 }
-
+*/
 .Palette-footer {
   background-color: white;
   height: 5vh;
