--- a/src/Palette.css
+++ b/src/Palette.css
@@ -11,6 +11,8 @@
   height: 90%;
 }
 */
+
+/*
 .Palette-footer {
   background-color: white;
   height: 5vh;
@@ -24,3 +26,4 @@
   font-size: 1.5rem;
   margin: 0 1rem;
 }
+*/
