--- a/src/Navbar.css
+++ b/src/Navbar.css
@@ -1,8 +1,10 @@
+/* 
 .slider {
   width: 340px;
   margin: 0 10px;
   display: inline-block;
-}
+} 
+*/
 
 /*
 --> MOVED TO Navbar.css
@@ -12,7 +14,7 @@
 .rc-slider-handle
 .rc-slider-rail
 */
-
+/* 
 .Navbar {
   display: flex;
   align-items: center;
@@ -35,8 +37,9 @@
   text-decoration: none;
   color: black;
 }
-
+*/
+/* 
 .select-container {
-  margin-left: auto; /* this aligns right */
+  margin-left: auto; /* this aligns right //
   margin-right: 1rem;
-}
+} */
