--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,10 @@
+/*
+//moved to Page.css
 .page {
   height: 100vh;
   position: fixed;
   width: 100%;
+  top: 0;
+  transition: opacity 0.5s ease-in-out;
 }
+*/
